--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "license": "MIT",
   "dependencies": {
     "handlebars": "^4.1.2",
-    "normalize.css": "^8.0.1"
+    "jquery": "^3.4.1",
+    "normalize.css": "^8.0.1",
+    "slick": "^1.12.2",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "webpack-dev-server --config webpack.dev.js --mode development",
